Qt: use-after-free deleting window while wayland compositor is displaying

warning: queue 0x7fbeb43019c0 destroyed while proxies still attached:
  wl_surface#47 still attached
Erreur de segmentation (core dumped)
#0  0x0000000000000000 in ??? ()
#1  0x00007fbeedb51697 in vlc_window_Delete (window=0x7fbe802f5c90) at ../../vlc/src/video_output/window.c:175
#2  0x00007fbeedb51442 in vout_display_window_Delete (window=<optimized out>) at ../../vlc/src/video_output/video_window.c:437
#3  0x00007fbeedb44fac in vout_Release (vout=0x7fbe8027a160) at ../../vlc/src/video_output/video_output.c:2064
#4  vout_Release (vout=0x7fbe8027a160) at ../../vlc/src/video_output/video_output.c:2044
#5  0x00007fbeedb2ae77 in DestroyVout (p_resource=0x2c518460) at ../../vlc/src/input/resource.c:159
#6  input_resource_Release (p_resource=0x2c518460) at ../../vlc/src/input/resource.c:334
#7  0x00007fbeedb20c47 in vlc_player_Delete (player=0x2c517230) at ../../vlc/src/player/player.c:1896
#8  0x00007fbeedaecdb9 in vlc_playlist_PlayerDestroy (playlist=<optimized out>) at ../../vlc/src/playlist/player.c:169
#9  0x00007fbeedaed079 in vlc_playlist_Delete (playlist=0x2c520860) at ../../vlc/src/playlist/playlist.c:74
#10 0x00007fbeedacaa4c in libvlc_InternalCleanup (p_libvlc=0x2c48cd10) at ../../vlc/src/libvlc.c:383
#11 0x00007fbeedbf42f3 in libvlc_release (p_instance=p_instance@entry=0x2c48ccb0) at ../../vlc/lib/core.c:102
#12 0x000000000040158c in main (argc=<optimized out>, argv=0x7ffd0357b468) at ../../vlc/bin/vlc.c:275