qt: fix window destroyed before the vout window in Wayland compositor

fix: #28760